# fastbpmn

./: .dockerignore  .gitignore  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  cliff.toml  pyproject.toml  tox.ini
.github/actions/cliff-version/: action.yaml
.github/workflows/: changelog.yaml  docs.yaml  prepare_release.yaml  release.yaml  reusable_dockerbuild.yaml  reusable_docs.yaml  reusable_verify.yaml  verify.yaml  version.yaml
docker-images/: .dockerignore  Dockerfile
docker-images/general/: start.py  start.sh
docker-images/general/app/: minion.py
docs/: .gitignore  zensical.toml
docs/docs/: CHANGELOG.md  changelog.md  index.md  roadmap.md
docs/docs/features/: builtins.md
docs/docs/integrations/: camunda7.md  cibseven.md  index.md  operaton.md
docs/docs/usage/: context.md  dependencies.md
examples/camunda7/: README.md  docker-compose.yaml  example.py
examples/cibseven/: README.md  docker-compose.yaml  example.bpmn
examples/operaton/: Dockerfile  README.md  docker-compose.yaml  example.py
src/fastbpmn/: __init__.py  _types.py  fastbpmn.py  fastbpmn_types.py  process.py  readiness.py  result.py  task.py  task_group.py  test_aetpi.py
src/fastbpmn/aetpi/: logonly.py  utils.py
src/fastbpmn/aetpi/middleware/: __init__.py  variables.py
src/fastbpmn/aetpi/servers/camunda7/: __init__.py  decoder.py  encoder.py  middleware.py  producer.py  server.py  worker.py
src/fastbpmn/camunda/: __init__.py  asynchttp.py  config.py  datatypes.py  errors.py  json.py  models.py  processengine.py  utils.py
src/fastbpmn/context/: context.py  io.py  utils.py
src/fastbpmn/data/mkdocs/: mkdocs.yml
src/fastbpmn/data/mkdocs/docs/: impressum.md  kontakt.md
src/fastbpmn/data/mkdocs/docs/css/: custom.css
src/fastbpmn/data/mkdocs/docs/js/: bpmn-initializer.js  custom.js
src/fastbpmn/data/mkdocs/docs/minions/: .minion_readiness  example.bpmn  example.py  getting-started.md
src/fastbpmn/dependencies/: models.py  utils.py
src/fastbpmn/docs/: util.py
src/fastbpmn/docs/plugin/: __init__.py  minion.py  util.py
src/fastbpmn/errors/: __init__.py  base.py  bpmn_error.py  types.py
src/fastbpmn/lifespan/: __init__.py
src/fastbpmn/middleware/context/: __init__.py
src/fastbpmn/middleware/exceptions/: __init__.py  handler.py  types.py  utils.py
src/fastbpmn/middleware/guard/: __init__.py  types.py  utils.py
src/fastbpmn/models/: __init__.py  base.py  task.py
src/fastbpmn/models/types/: __init__.py  camunda7.py
src/fastbpmn/params/: __init__.py  process_instance.py  task.py
src/fastbpmn/processor/: __init__.py  routing.py  task.py
src/fastbpmn/utils/: asyncer.py  concurrency.py  config.py  func.py  inspect.py  names.py
src/squirrel/: __init__.py  app.py  arguments.py  parser.py  run.py  settings.py
src/squirrel/flavours/: __init__.py
src/squirrel/flavours/camunda7/: entrypoint.py  settings.py
src/yio_minions/: __init__.py  minion.py  process.py  result.py  task.py  task_group.py  test_aetpi.py
src/yio_minions/aetpi/: logonly.py
src/yio_minions/aetpi/servers/camunda7/: decoder.py  middleware.py  producer.py  queue.py  server.py  settings.py  worker.py
src/yio_minions/camunda/: config.py  processengine.py  utils.py
src/yio_minions/context/: __init__.py  context.py
src/yio_minions/data/mkdocs/: mkdocs.yml
src/yio_minions/data/mkdocs/docs/: index.md
src/yio_minions/data/mkdocs/docs/css/: bpmn-js.css
src/yio_minions/data/mkdocs/docs/js/: bpmn-navigated-viewer.production.min.js  bpmn-viewer.production.min.js
src/yio_minions/data/mkdocs/docs/minions/: example.py  getting-started.md  index.md
src/yio_minions/docs/: util.py
src/yio_minions/docs/bpmn/: __init__.py  utils.py
src/yio_minions/docs/plugin/: minion.py  util.py
src/yio_minions/errors/: base.py  context.py  process_engine.py  task_failure_error.py
src/yio_minions/lifespan/: __init__.py
src/yio_minions/middleware/: __init__.py
src/yio_minions/middleware/context/: __init__.py
src/yio_minions/middleware/exceptions/: __init__.py  handler.py  types.py  utils.py
src/yio_minions/middleware/guard/: utils.py
src/yio_minions/models/: base.py  decoder.py  encoder.py
src/yio_minions/models/types/: camunda7.py
src/yio_minions/processor/: __init__.py  routing.py  task.py
src/yio_minions/utils/: asyncio.py  inspect.py
tests/: conftest.py  test_task.py
tests/camunda/: test_utils.py
tests/context/: test_context.py  test_io.py
tests/dependencies/: test_utils.py
tests/models/: test_encode.py  test_types.py
tests/models/decoder/: test_camunda_loads.py  test_decode.py
tests/models/encoder/: test_camunda_dumps_variables.py  test_encode_bool.py  test_encode_date.py  test_encode_enum.py  test_encode_file.py  test_encode_iterable.py  test_encode_json.py  test_encode_number.py
tests/processor/: test_routing.py
tests/utils/: test_config.py  test_inspect.py  test_names.py
